--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-move": "^6.5.0",
+    "react-nice-avatar": "^1.5.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
